--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="third"></div>
             <div class="txt">
               <h1>Welcome you!</h1>
-              <p>イロハの小部屋へようこそ（ ＾ω＾）</p>
+              <p>いろは🍰の小部屋へようこそ（ ＾ω＾）</p>
             </div>
           </div>
        </div>
